--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "outDir": "./dist",
 		"lib": [ "ES2015", "dom" ],
 
+    "isolatedModules": true,
+
     "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
@@ -23,7 +25,7 @@
   },
 
 	"include": [
-		"src/**/*.ts"
+		"src/**/*.ts",
 	]
 
 }
